# app/Http/Requests/Review/ReviewStoreRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Review;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ReviewStoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'user_id' => 'required|integer|exists:users,id',
+            'card_id' => 'required|integer|exists:cards,id',
+            'is_active' => 'boolean',
+            'review_score' => 'integer',
+            'review_date' => 'string|nullable',
+        ];
+    }
+}
